--- a/app/src/main/res/layout/activity_formulario_cadastro.xml
+++ b/app/src/main/res/layout/activity_formulario_cadastro.xml
@@ -8,7 +8,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activity.FormularioCadastroActivity">
+        tools:context=".ui.activity.activity.FormularioCadastroActivity">
 
         <TextView
             android:id="@+id/textView"
