--- a/app/src/main/res/layout/activity_formulario_cadastro.xml
+++ b/app/src/main/res/layout/activity_formulario_cadastro.xml
@@ -39,6 +39,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textCapWords"
                 android:hint="Nome Completo" />
         </android.support.design.widget.TextInputLayout>
 
@@ -53,6 +54,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:layout_marginTop="8dp"
                 android:hint="CPF" />
         </android.support.design.widget.TextInputLayout>
@@ -69,6 +71,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="phone"
                 android:hint="Telefone com DDD" />
         </android.support.design.widget.TextInputLayout>
 
@@ -84,6 +87,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:hint="E-mail" />
         </android.support.design.widget.TextInputLayout>
 
@@ -99,6 +103,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:hint="Senha" />
         </android.support.design.widget.TextInputLayout>
 
