--- a/app/src/main/res/layout/activity_formulario_cadastro.xml
+++ b/app/src/main/res/layout/activity_formulario_cadastro.xml
@@ -96,6 +96,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_email"
             app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_email"
             app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_email">
